updated AuthenticationFilter